fix safari loading video as image, min-content restored

--- a/components/text.module.css
+++ b/components/text.module.css
@@ -187,6 +187,11 @@
     max-width: 100%;
 }
 
+.p:has(> .mediaContainer) .mediaContainer.loaded
+{
+    width: min-content;
+}
+
 .p:has(> .mediaContainer) .mediaContainer img,
 .p:has(> .mediaContainer) .mediaContainer video
 {
