fix uploaded videos don't load on safari (#1593)
* fix uploaded videos don't load on safari

* fix safari loading video as image, min-content restored

* refinements for ssr and skip load check for images

---------

Co-authored-by: Keyan <34140557+huumn@users.noreply.github.com>
Co-authored-by: k00b <k00b@stacker.news>

--- a/components/text.module.css
+++ b/components/text.module.css
@@ -184,8 +184,12 @@
 .p:has(> .mediaContainer) .mediaContainer
 {
     display: flex;
-    width: min-content;
     max-width: 100%;
+}
+
+.p:has(> .mediaContainer) .mediaContainer.loaded
+{
+    width: min-content;
 }
 
 .p:has(> .mediaContainer) .mediaContainer img,
