--- a/components/upvote.module.css
+++ b/components/upvote.module.css
@@ -5,11 +5,26 @@
     -webkit-touch-callout: none;
 }
 
+.upvote:hover {
+    fill: var(--hover-fill) !important;
+    filter: var(--hover-filter) !important;
+}
+
 .boost {
     fill: var(--theme-clickToContextColor);
     user-select: none;
     -webkit-user-select: none;
     -webkit-touch-callout: none;
+}
+
+.boost:hover {
+    fill: var(--hover-fill) !important;
+    filter: var(--hover-filter) !important;
+}
+
+.boost.boosted {
+    fill: var(--fill);
+    filter: var(--filter);
 }
 
 .upvoteWrapper {
@@ -28,8 +43,8 @@
 }
 
 .upvote.voted {
-    fill: #F6911D;
-    filter: drop-shadow(0 0 6px #f6911d90);
+    fill: var(--fill);
+    filter: var(--filter);
 }
 
 .cover {
@@ -43,6 +58,7 @@
 }
 
 .pending {
+    fill: var(--hover-fill);
     animation-name: pulse;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
