--- a/styles/wallet.module.css
+++ b/styles/wallet.module.css
@@ -4,7 +4,12 @@
   grid-gap: 20px;
   justify-items: center;
   align-items: center;
+}
+
+.walletFilters {
   margin-top: 3rem;
+  margin-left: 0.2rem;
+  margin-bottom: 0.5rem;
 }
 
 .drag {
