Use auto-fill instead of auto-fit
This doesn't seem to change anything but this is closer to our intention how the grid should work with fixed column width.

--- a/styles/wallet.module.css
+++ b/styles/wallet.module.css
@@ -1,6 +1,6 @@
 .walletGrid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, 160px);
+  grid-template-columns: repeat(auto-fill, 160px);
   grid-gap: 20px;
 }
 
