--- a/styles/wallet.module.css
+++ b/styles/wallet.module.css
@@ -4,6 +4,12 @@
   grid-gap: 20px;
 }
 
+@media (max-width: 640px) {
+  .walletGrid {
+    grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+  }
+}
+
 .walletFilters {
   margin-top: 3rem;
   margin-left: 0.2rem;
