--- a/styles/wallet.module.css
+++ b/styles/wallet.module.css
@@ -50,18 +50,10 @@
   align-items: center;
   column-gap: 0.2rem;
   margin-left: auto;
-}
-
-.cardMeta {
-  width: 100%;
-  margin: 0;
-  display: flex;
   padding: 10px;
-  line-height: 0;
-  align-items: center;
   position: absolute;
   top: 0;
-  left: 0;
+  right: 0;
 }
 
 .walletLogo {
@@ -76,7 +68,7 @@
 .walletBanner {
   max-width: min(256px, 100vw);
   max-height: 100px;
-  padding-bottom: 1rem;
+  padding: 0 15px 1rem 15px;
 }
 
 .badge {
