use flexbox for wallet card header and make logos more consistent (#1654)
* use flexbox for wallet card header

* make wallet logo consistent

* remove extra div

* Update styles/wallet.module.css

Co-authored-by: ekzyis <ek@stacker.news>

* Update styles/wallet.module.css

Co-authored-by: ekzyis <ek@stacker.news>

* resize wallet banner

* remove unused justify-content

* remove cardMeta

---------

Co-authored-by: ekzyis <ek@stacker.news>
Co-authored-by: Keyan <34140557+huumn@users.noreply.github.com>
Co-authored-by: k00b <k00b@stacker.news>

--- a/styles/wallet.module.css
+++ b/styles/wallet.module.css
@@ -46,14 +46,29 @@
 }
 
 .indicators {
-  position: absolute;
-  width: 100%;
-  display: grid;
+  display: flex;
   align-items: center;
-  justify-content: end;
-  padding: 10px 10px 0 10px;
-  grid-gap: 0.2rem;
-  grid-auto-flow: column;
+  column-gap: 0.2rem;
+  margin-left: auto;
+  padding: 10px;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.walletLogo {
+  max-width: 100%;
+  max-height: 40%;
+  margin: auto;
+  text-align: center;
+  font-size: 1.5rem;
+  line-height: 1;
+}
+
+.walletBanner {
+  max-width: min(256px, 100vw);
+  max-height: 100px;
+  padding: 0 15px 1rem 15px;
 }
 
 .badge {
