--- a/components/header.module.css
+++ b/components/header.module.css
@@ -110,3 +110,14 @@
     background-color: var(--bs-body-bg);
     z-index: 1000;
 }
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    border: 0;
+}
