make .visually-hidden global, use className rather than class

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -985,6 +985,17 @@ div[contenteditable]:focus,
   }
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
+}
+
 .react-datepicker-wrapper {
   display: inline-block;
   padding: 0;
