--- a/components/link-to-context.module.css
+++ b/components/link-to-context.module.css
@@ -31,6 +31,7 @@
 .linkBoxParent input,
 .linkBoxParent iframe,
 .linkBoxParent video,
+.linkBoxParent pre,
 .linkBoxParent img {
     pointer-events: auto !important;
 }
