Button to show MultiSubSelect, correct redirects, handle query.sub array with + or native

--- a/components/form.module.css
+++ b/components/form.module.css
@@ -189,6 +189,7 @@ textarea.passwordInput {
 .multiSelectAddIcon {
     width: 1.3rem;
     height: 1.3rem;
+    margin-bottom: 0.1rem;
     fill: var(--theme-clickToContextColor) !important;
 }
 
