--- a/components/text.module.css
+++ b/components/text.module.css
@@ -167,7 +167,6 @@
     width: 100%;
     max-width: 100%;
     height: auto;
-    overflow: hidden;
     max-height: 25vh;
     aspect-ratio: var(--aspect-ratio);
     margin: 0;
@@ -196,14 +195,11 @@
 .p:has(> .mediaContainer) .mediaContainer video
 {
     block-size: revert-layer;
+    min-width: 30%;
     max-width: stretch;
 }
 
 .p.onlyImages {
-    display: block;
-}
-
-.p.onlyImages:has(> .mediaContainer.loaded) {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
