--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -217,13 +217,10 @@ $zindex-sticky: 900;
 }
 
 .btn-primary {
-  --bs-btn-color: #212529;
   --bs-btn-bg: var(--bs-primary);
   --bs-btn-border-color: var(--bs-primary);
   --bs-btn-hover-border-color: var(--bs-primary);
-  --bs-btn-hover-color: #212529;
   --bs-btn-hover-bg: var(--bs-primary);
-  --bs-btn-active-color: #212529;
   --bs-btn-active-bg: var(--bs-primary);
   --bs-btn-focus-shadow-rgb: 233, 236, 239;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
@@ -233,19 +230,55 @@ $zindex-sticky: 900;
 }
 
 .btn-secondary {
-  --bs-btn-color: #212529;
   --bs-btn-bg: var(--bs-secondary);
   --bs-btn-border-color: var(--bs-secondary);
   --bs-btn-hover-border-color: var(--bs-secondary);
-  --bs-btn-hover-color: #212529;
   --bs-btn-hover-bg: var(--bs-secondary);
-  --bs-btn-active-color: #212529;
   --bs-btn-active-bg: var(--bs-secondary);
   --bs-btn-focus-shadow-rgb: 233, 236, 239;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: var(--bs-secondary);
   --bs-btn-disabled-bg: transparent;
   --bs-btn-disabled-border-color: var(--bs-secondary);
+}
+
+.btn-info {
+  --bs-btn-bg: var(--bs-info);
+  --bs-btn-border-color: var(--bs-info);
+  --bs-btn-hover-border-color: var(--bs-info);
+  --bs-btn-hover-bg: var(--bs-info);
+  --bs-btn-active-bg: var(--bs-info);
+  --bs-btn-focus-shadow-rgb: 233, 236, 239;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: var(--bs-info);
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: var(--bs-info);
+}
+
+.btn-success {
+  --bs-btn-bg: var(--bs-success);
+  --bs-btn-border-color: var(--bs-success);
+  --bs-btn-hover-border-color: var(--bs-success);
+  --bs-btn-hover-bg: var(--bs-success);
+  --bs-btn-active-bg: var(--bs-success);
+  --bs-btn-focus-shadow-rgb: 233, 236, 239;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: var(--bs-success);
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: var(--bs-success);
+}
+
+.btn-danger {
+  --bs-btn-bg: var(--bs-danger);
+  --bs-btn-border-color: var(--bs-danger);
+  --bs-btn-hover-border-color: var(--bs-danger);
+  --bs-btn-hover-bg: var(--bs-danger);
+  --bs-btn-active-bg: var(--bs-danger);
+  --bs-btn-focus-shadow-rgb: 233, 236, 239;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: var(--bs-danger);
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: var(--bs-danger);
 }
 
 
