Prevent Markdown Heading links in notifications from being clickable

--- a/components/link-to-context.module.css
+++ b/components/link-to-context.module.css
@@ -35,3 +35,7 @@
 .linkBoxParent img {
     pointer-events: auto !important;
 }
+
+.linkBoxParent a[href^="/notifications#"] {
+    pointer-events: none !important;
+}
