--- a/components/link-to-context.module.css
+++ b/components/link-to-context.module.css
@@ -35,3 +35,12 @@
 .linkBoxParent img {
     pointer-events: auto !important;
 }
+
+.linkBoxParent h1 a,
+.linkBoxParent h2 a,
+.linkBoxParent h3 a,
+.linkBoxParent h4 a,
+.linkBoxParent h5 a,
+.linkBoxParent h6 a {
+    pointer-events: none !important;
+}
