--- a/styles/logger.module.css
+++ b/styles/logger.module.css
@@ -1,4 +1,4 @@
-.tableContainer {
+.container {
     width: 100%;
     max-height: 60svh;
     overflow-y: auto;
@@ -9,7 +9,7 @@
 }
 
 @media screen and (min-width: 768px) {
-    .tableContainer {
+    .container {
         max-height: 70svh;
     }
 
@@ -18,25 +18,30 @@
     }
 }
 
-.tableRow {
+.row {
+    display: flex;
+    gap: 0.5rem;
     font-family: monospace;
     color: var(--theme-grey) !important; /* .text-muted */
 }
 
-.timestamp {
-    vertical-align: top;
-    text-wrap: nowrap;
-    justify-self: first baseline;
+.row:hover {
+    background-color: rgba(128, 128, 128, 0.1);
 }
 
-.wallet {
-    vertical-align: top;
-    font-weight: bold;
+.timestamp {
+    text-wrap: nowrap;
+    min-width: 20px;
+    text-align: right;
 }
 
 .level {
     font-weight: bold;
-    vertical-align: top;
     text-transform: uppercase;
-    padding-right: 0.5em;
+    min-width: 32px;
+}
+
+.tag {
+    vertical-align: top;
+    font-weight: bold;
 }
