fix embed list bullet to render at top of embed (#2221)
* fix embed list bullet to render at top of embed

* make it work for images/video

* fix tweet skeleton and list horizontal scroll

---------

Co-authored-by: k00b <k00b@stacker.news>

--- a/components/text.module.css
+++ b/components/text.module.css
@@ -252,11 +252,18 @@
     margin-top: .25rem;
 }
 
+.text li > :is(.twitterContainer, .nostrContainer, .wavlakeWrapper, .spotifyWrapper, .onlyImages) {
+  display: inline-flex;
+  vertical-align: top;
+  width: 100%;
+}
+
 .text ul,
 .text ol {
   margin-top: 0;
   margin-bottom: 0rem;
   padding-left: 2rem;
+  max-width: calc(100% - 1rem);
 }
 
 .text ol ol,
