--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -220,6 +220,8 @@ $zindex-sticky: 900;
   scroll-margin-top: 60px;
 }
 
+
+
 .ms-xs {
   margin-left: 0.125rem;
 }
@@ -594,6 +596,14 @@ div[contenteditable]:disabled,
   flex-direction: column;
   min-height: 100vh;
   min-height: 100svh;
+}
+
+#__next > main {
+  z-index: 0;
+}
+
+#__next > footer {
+  z-index: 0;
 }
 
 footer {
