--- a/components/fireworks.module.css
+++ b/components/fireworks.module.css
@@ -1,8 +1,9 @@
 .fireworks {
-  z-index: 0;
+  z-index: 100;
   position: fixed;
   top: 0;
   left: 0;
   width: 100vw;
   height: 100vh;
+  pointer-events: none;
 }
