Fix autoprefixer warning about mixed support
This warning was in the app logs:

app     | Warning
app     |
app     | (31:3) autoprefixer: end value has mixed support, consider using flex-end instead
app     |
app     | Import trace for requested module:
app     | ./styles/wallet.module.css
app     | ./wallets/client/hooks/prompt.js
app     | ./wallets/client/hooks/index.js
app     | ./wallets/client/context/hooks.js
app     | ./wallets/client/context/provider.js
app     | ./wallets/client/context/index.js

--- a/styles/wallet.module.css
+++ b/styles/wallet.module.css
@@ -28,7 +28,7 @@
   align-items: center;
   column-gap: 0.2rem;
   padding: 10px;
-  justify-content: end;
+  justify-content: flex-end;
 }
 
 .indicator {
