--- a/styles/wallet.module.css
+++ b/styles/wallet.module.css
@@ -29,6 +29,10 @@
   column-gap: 0.2rem;
   padding: 10px;
   justify-content: flex-end;
+  position: absolute;
+  width: 100%;
+  top: 0;
+  right: 0;
 }
 
 .indicator {
