--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -908,7 +908,15 @@ div[contenteditable]:focus,
   box-shadow: inset 0 0 1px 1px rgba(0, 123, 190, 0.25);
 }
 
+.outline-new-injected-comment {
+  box-shadow: inset 0 0 1px 1px rgba(0, 123, 190, 0.25);
+}
+
 .outline-new-comment.outline-new-comment-unset {
+  box-shadow: none;
+}
+
+.outline-new-injected-comment.outline-new-comment-unset {
   box-shadow: none;
 }
 
