--- a/components/comment.module.css
+++ b/components/comment.module.css
@@ -147,15 +147,33 @@
 
 @keyframes pulse {
     0% {
-        background-color: #FADA5E;
+        background-color: #80d3ff;
         opacity: 0.7;
     }
     50% {
-        background-color: #F6911D;
+        background-color: #007cbe;
         opacity: 1;
     }
     100% {
-        background-color: #FADA5E;
+        background-color: #80d3ff;
         opacity: 0.7;
+    }
+}
+
+.floatingComments {
+    position: fixed;
+    top: 72px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1050;
+    animation: slideDown 0.3s ease-out;
+}
+
+@keyframes slideDown {
+    0% {
+        transform: translateX(-50%) translateY(-100px);
+    }
+    100% {
+        transform: translateX(-50%) translateY(0);
     }
 }
