Use x-overflow for tab navigation (#2337)
* Use x-overflow for tab navigation

* Define all CSS for tabs in nav.module.css

--- a/styles/nav.module.css
+++ b/styles/nav.module.css
@@ -1,4 +1,10 @@
 .nav {
+    display: flex;
+    flex-wrap: nowrap;
+    white-space: nowrap;
+    overflow-x: auto;
+    scrollbar-width: thin;
+    padding-bottom: 0.5rem;
     margin: 1rem 0;
     justify-content: start;
     font-size: 110%;
@@ -11,9 +17,4 @@
 
 .nav :global .active {
     border-bottom: 2px solid var(--bs-primary);
-}
-
-.alert {
-    color: var(--bs-danger);
-    margin-bottom: 10px;
 }
