--- a/styles/nav.module.css
+++ b/styles/nav.module.css
@@ -6,7 +6,7 @@
     scrollbar-width: thin;
     padding-bottom: 0.5rem;
     margin: 1rem 0;
-    justify-content: start;
+    justify-content: flex-start;
     font-size: 110%;
     gap: 0 0.5rem;
 }
