--- a/components/comment.module.css
+++ b/components/comment.module.css
@@ -177,3 +177,19 @@
         transform: translateX(-50%) translateY(0);
     }
 }
+
+.injectedComment {
+    animation: fadeIn 0.3s ease-out;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.7;
+  }
+  100% {
+    opacity: 1;
+  }
+}
