--- a/components/comment.module.css
+++ b/components/comment.module.css
@@ -172,25 +172,36 @@
 /* comment navigator */
 .commentNavigator {
     position: fixed;
-    bottom: 1rem;
+    bottom: calc(1rem + env(safe-area-inset-bottom));
     right: 1rem;
     z-index: 1050;
     background-color: var(--bs-info);
     padding: 0.5rem;
     border-radius: 0.4rem;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
-    animation: slideUp 0.3s ease-out;
     display: flex;
     align-items: center;
     gap: 0.4rem;
-    opacity: 0.8;
     color: #fff;
+    animation: slideUp 0.3s ease-out;
+    opacity: 0.8;
     transition: opacity 0.3s ease-in-out;
     justify-content: center;
+    /* 53px footer-padding */
+    @media (max-width: 768px) {
+        right: 0.5rem;
+        bottom: calc(0.5rem + env(safe-area-inset-bottom));
+        margin-bottom: 53px;
+    }
 }
 
 .commentNavigator:hover {
     opacity: 1;
+}
+
+@keyframes slideUp {
+    from { transform: translateY(100%); }
+    to { transform: translateY(0); }
 }
 
 
@@ -198,31 +209,24 @@
     width: 24px;
     height: 24px;
     cursor: pointer;
-    fill: rgba(255, 255, 255, 0.55);
+    fill: rgba(255, 255, 255, 0.75);
     vertical-align: 0;
 }
 
 .navigatorButton:hover {
-    fill: rgba(255, 255, 255, 0.75);
+    fill: #fff;
 }
 
 .closeButton {
-    color: rgba(255, 255, 255, 0.55);
+    color: rgba(255, 255, 255, 0.75);
     font-family: "lightning";
     font-size: 150%;
     line-height: 1rem;
     margin-bottom: -0.25rem;
     cursor: pointer;
-    display: flex;
-    align-items: center;
     padding-right: 0.25rem;
 }
 
 .closeButton:hover {
-    color: rgba(255, 255, 255, 0.75);
-}
-
-@keyframes slideUp {
-    from { transform: translateY(100%); }
-    to { transform: translateY(0); }
+    color: rgba(255, 255, 255);
 }
