--- a/components/link-to-context.module.css
+++ b/components/link-to-context.module.css
@@ -12,6 +12,9 @@
 
 .linkBoxParent {
     position: relative;
+}
+
+.linkBoxParent.pad {
     margin-left: -0.5rem;
     padding-left: 0.5rem;
     margin-right: -0.5rem;
