Improve CSS for lists in modals

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -322,6 +322,10 @@ svg {
   padding: 0;
   background-color: transparent;
 }
+.modal-body li {
+  line-height: 1.25;
+  margin-top: 0.5rem;
+}
 .modal-close.fullscreen {
   padding: 1.25rem;
 }
