limit search query length

--- a/components/search.module.css
+++ b/components/search.module.css
@@ -22,10 +22,6 @@
 form>.active {
     display: flex;
     pointer-events: auto;
-    flex-flow: row nowrap;
+    flex-flow: row;
     align-items: center;
-}
-
-form>.active :global(.input-group) {
-    flex-flow: nowrap;
 }
